Switch between file possible Fixed some layout problems

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,6 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
   padding: 50px;
@@ -20,14 +16,20 @@ td {
 }
 
 table {
-  width: 50%;
-  margin: 10px 10px;
+  width: 100%;
+  margin: 10px 0;
 }
 
 td {
   width: 100%;
+  min-width: 150px;
   padding-right: 10px;
   vertical-align: center;
+}
+
+.tdType,
+.tdIcon {
+  min-width: 0;
 }
 
 select {
